# SOFOpt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: ControlAlgebra.cpp  ControlAlgebra.hpp  SOFOpt_Core.cpp  SOFOpt_Core.hpp  SOFOpt_ExecProtocol.cpp  SOFOpt_ExecProtocol.hpp  SOFOpt_LibItf.cpp  SOFOpt_LibItf.h  SOFOpt_SQP.cpp  SOFOpt_SQP.hpp  SOF_Problem.h  debug_main.cpp  main.cpp  room_temperature_debug_main.cpp
